[profile.release]
panic = 'unwind'

[workspace]
members = [
	'totem-lego-parachain/node',
	'totem-lego-parachain/runtime',
	'totem-mainnet/node',
	'totem-mainnet/runtime',
	'common',
	'primitives',
	'pallets/accounting',
	'pallets/archive',
	'pallets/bonsai',
	'pallets/escrow',
	'pallets/funding',
	'pallets/orders',
	'pallets/prefunding',
	'pallets/teams',
	'pallets/timekeeping',
	'pallets/transfer',
]
