[profile.release]
panic = 'unwind'

[workspace]
members = [
	'lego/node',
	'lego/runtime',
	'wapex/node',
	'wapex/runtime',
	'kapex/node',
	'kapex/runtime',
	'parachain-totem-kapex/node',
	'parachain-totem-kapex/runtime',
	'parachain-totem-wapex/node',
	'parachain-totem-wapex/runtime',
	'parachain-totem-lego/node',
	'parachain-totem-lego/runtime',
	'totem-mainnet/node',
	'totem-mainnet/runtime',
	'common',
	'parachains-common',
	'primitives',
	'pallets/accounting',
	'pallets/archive',
	'pallets/bonsai',
	'pallets/escrow',
	'pallets/funding',
	'pallets/orders',
	'pallets/prefunding',
	'pallets/teams',
	'pallets/timekeeping',
	'pallets/transaction-payment',
	'pallets/transfer',
]
