[package]
name = 'totem-common'
version = '1.1.0'
authors = ['Totem Accounting <support@totemaccounting.com>']
description = 'Code that is common to all the Totem Pallets'
license = 'GNU'
homepage = 'https://totemaccounting.com'
repository = 'https://gitlab.com/totem-tech/totem'
edition = '2021' 

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# external dependencies
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false, features = [
	"derive",
	"max-encoded-len",
] }
frame-support = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.15', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.15', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.15', default-features = false }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'sp-runtime/std',
    'sp-std/std',
]
