[package]
name = 'parachains-common'
version = '1.0.0'
authors = ['Parity Technologies <admin@parity.io>']
edition = '2021'
description = 'Logic which is common to all parachain runtimes'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# External dependencies
codec = { package = 'parity-scale-codec', version = '2.3.0', features = ['derive'], default-features = false }
scale-info = { version = '1.0.0', default-features = false, features = ['derive'] }

# Substrate dependencies
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
frame-executive = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
pallet-asset-tx-payment = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
pallet-assets = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
pallet-authorship = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
# pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
pallet-balances-totem = { default-features = false, path = '../../pallets/balances' }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13', default-features = false }

# Polkadot dependencies
polkadot-runtime-common = { git = 'https://github.com/paritytech/polkadot', default-features = false , branch = 'polkadot-v0.9.13' }
polkadot-primitives = { git = 'https://github.com/paritytech/polkadot', default-features = false , branch = 'polkadot-v0.9.13' }
xcm = { git = 'https://github.com/paritytech/polkadot', default-features = false , branch = 'polkadot-v0.9.13' }
xcm-executor = { git = 'https://github.com/paritytech/polkadot', default-features = false , branch = 'polkadot-v0.9.13' }

# Local dependencies
# pallet-collator-selection = { path = '../../pallets/collator-selection', default-features = false }
pallet-collator-selection = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.13', default-features = false }

[dev-dependencies]
sp-io = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = 'polkadot-v0.9.13' }
pallet-authorship = { git = 'https://github.com/paritytech/substrate', default-features = false , branch = 'polkadot-v0.9.13' }

[build-dependencies]
substrate-wasm-builder = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }

[features]
default = ['std']
std = [
	'codec/std',
	'scale-info/std',
	'sp-consensus-aura/std',
	'sp-std/std',
	'sp-io/std',
	'frame-support/std',
	'frame-executive/std',
	'frame-system/std',
	'pallet-asset-tx-payment/std',
	'pallet-collator-selection/std',
	'pallet-assets/std',
	'pallet-authorship/std',
	'pallet-balances-totem/std',
	'polkadot-runtime-common/std',
	'polkadot-primitives/std',
]
