[package]
name = 'totem-primitives'
version = '1.0.0'
authors = ['Totem Accounting <support@totemaccounting.com>']
description = 'Types used to communicates with the clients'
license = 'GNU'
homepage = 'https://totemaccounting.com'
repository = 'https://gitlab.com/totem-tech/totem'
edition = '2018'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = 'parity-scale-codec', version = '2.0.0', default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
max-encoded-len = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', version = "3.0.0", default-features = false, features = [ "derive" ] }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'sp-runtime/std',
    'sp-std/std',
    'max-encoded-len/std',
]
mock = []
