[package]
name = 'lego-node'
version = '1.1.0'
authors = ['Totem Accounting <support@totemaccounting.com>']
description = 'A Totem LEGO node'
license = 'GNU'
homepage = 'https://totemaccounting.com'
repository = 'https://gitlab.com/totem-tech/totem'
edition = '2021' 
build = 'build.rs'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[[bin]]
name = 'lego-node'
path = 'src/main.rs'

[features]
default = []
# lego-runtime-benchmarks = ['lego-runtime/runtime-benchmarks']

[dependencies]
# derive_more = '0.99.2'
log = '0.4.8'
codec = { package = 'parity-scale-codec', version = '2.3.0' }
structopt = '0.3.3'
serde = { version = '1.0.101', features = ['derive'] }
hex-literal = '0.2.1'
futures = { version = '0.3.1', features = ['compat'] }
async-trait = '0.1.42'

# Local Dependencies
lego-runtime = { path = '../runtime' }
parachains-common = { path = "../../parachains-common" }

# Substrate Dependencies
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', version = '4.0.0-dev', branch = 'polkadot-v0.9.13', default-features = false }
frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate', version = '4.0.0-dev', branch = 'polkadot-v0.9.13', default-features = false }
# frame-rpc-system = { git = 'https://github.com/paritytech/substrate', version = '4.0.0-dev', branch = 'polkadot-v0.9.13', default-features = false }
sc-basic-authorship = { git = 'https://github.com/paritytech/substrate', version = '0.10.0-dev', branch = 'polkadot-v0.9.13', default-features = false }
sc-chain-spec = { git = 'https://github.com/paritytech/substrate', version = '4.0.0-dev', branch = 'polkadot-v0.9.13', default-features = false }
sc-cli = { git = 'https://github.com/paritytech/substrate', version = '0.10.0-dev', branch = 'polkadot-v0.9.13', features = ["wasmtime"] }
sc-client-api = { git = 'https://github.com/paritytech/substrate', version = '4.0.0-dev', branch = 'polkadot-v0.9.13', default-features = false }
sc-consensus = { git = 'https://github.com/paritytech/substrate', version = '0.10.0-dev', branch = 'polkadot-v0.9.13', default-features = false }
sc-executor = { git = 'https://github.com/paritytech/substrate', version = '0.10.0-dev', branch = 'polkadot-v0.9.13', features = ["wasmtime"] }
sc-keystore = { git = 'https://github.com/paritytech/substrate', version = '4.0.0-dev', branch = 'polkadot-v0.9.13', default-features = false }
sc-network = { git = 'https://github.com/paritytech/substrate', version = '0.10.0-dev', branch = 'polkadot-v0.9.13', default-features = false }
sc-rpc = { git = 'https://github.com/paritytech/substrate', version = '4.0.0-dev', branch = 'polkadot-v0.9.13', default-features = false }
sc-rpc-api = { git = 'https://github.com/paritytech/substrate', version = '0.10.0-dev', branch = 'polkadot-v0.9.13', default-features = false }
sc-service = { git = 'https://github.com/paritytech/substrate', version = '0.10.0-dev', branch = 'polkadot-v0.9.13', features = ["wasmtime"] }
sc-telemetry = { git = 'https://github.com/paritytech/substrate', version = '4.0.0-dev', branch = 'polkadot-v0.9.13', default-features = false }
sc-tracing = { git = 'https://github.com/paritytech/substrate', version = '4.0.0-dev', branch = 'polkadot-v0.9.13', default-features = false }
sc-transaction-pool = { git = 'https://github.com/paritytech/substrate', version = '4.0.0-dev', branch = 'polkadot-v0.9.13', default-features = false }
sp-api = { git = 'https://github.com/paritytech/substrate', version = '4.0.0-dev', branch = 'polkadot-v0.9.13', default-features = false }
sp-block-builder = { git = 'https://github.com/paritytech/substrate', version = '4.0.0-dev', branch = 'polkadot-v0.9.13', default-features = false }
sp-blockchain = { git = 'https://github.com/paritytech/substrate', version = '4.0.0-dev', branch = 'polkadot-v0.9.13', default-features = false }
sp-consensus = { git = 'https://github.com/paritytech/substrate', version = '0.10.0-dev', branch = 'polkadot-v0.9.13', default-features = false }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate', version = '0.10.0-dev', branch = 'polkadot-v0.9.13', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate', version = '4.0.0-dev', branch = 'polkadot-v0.9.13', default-features = false }
sp-inherents = { git = 'https://github.com/paritytech/substrate', version = '4.0.0-dev', branch = 'polkadot-v0.9.13', default-features = false }
# sp-io = { git = 'https://github.com/paritytech/substrate', version = '4.0.0-dev', branch = 'polkadot-v0.9.13', default-features = false }
sp-keystore = { git = 'https://github.com/paritytech/substrate', version = '0.10.0-dev', branch = 'polkadot-v0.9.13', default-features = false }
sp-offchain = { git = 'https://github.com/paritytech/substrate', version = '4.0.0-dev', branch = 'polkadot-v0.9.13', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', version = '4.0.0-dev', branch = 'polkadot-v0.9.13', default-features = false }
sp-session = { git = 'https://github.com/paritytech/substrate', version = '4.0.0-dev', branch = 'polkadot-v0.9.13', default-features = false }
sp-timestamp = { git = 'https://github.com/paritytech/substrate', version = '4.0.0-dev', branch = 'polkadot-v0.9.13', default-features = false }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate', version = '4.0.0-dev', branch = 'polkadot-v0.9.13', default-features = false }
substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate', version = '4.0.0-dev', branch = 'polkadot-v0.9.13', default-features = false }
substrate-prometheus-endpoint = { git = 'https://github.com/paritytech/substrate', version = '0.10.0-dev', branch = 'polkadot-v0.9.13', default-features = false }
try-runtime-cli = { git = 'https://github.com/paritytech/substrate', version = '0.10.0-dev', branch = 'polkadot-v0.9.13', default-features = false }

# RPC related Dependencies
jsonrpc-core = '18.0.0'
sc-transaction-pool-api = { git = 'https://github.com/paritytech/substrate', version = '4.0.0-dev', branch = 'polkadot-v0.9.13', default-features = false }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
pallet-transaction-payment-rpc = { git = 'https://github.com/paritytech/substrate', version = '4.0.0-dev', branch = 'polkadot-v0.9.13', default-features = false }

# Cumulus dependencies
cumulus-client-cli = { git = 'https://github.com/paritytech/cumulus', version = '0.1.0', branch = 'polkadot-v0.9.13', default-features = false }
cumulus-client-collator = { git = 'https://github.com/paritytech/cumulus', version = '0.1.0', branch = 'polkadot-v0.9.13', default-features = false }
cumulus-client-consensus-aura = { git = 'https://github.com/paritytech/cumulus', version = '0.1.0', branch = 'polkadot-v0.9.13', default-features = false }
cumulus-client-consensus-common = { git = 'https://github.com/paritytech/cumulus', version = '0.1.0', branch = 'polkadot-v0.9.13', default-features = false }
# cumulus-client-consensus-relay-chain = { git = 'https://github.com/paritytech/cumulus', version = '0.1.0', branch = 'polkadot-v0.9.13', default-features = false }
cumulus-client-network = { git = 'https://github.com/paritytech/cumulus', version = '0.1.0', branch = 'polkadot-v0.9.13', default-features = false }
cumulus-client-service = { git = 'https://github.com/paritytech/cumulus', version = '0.1.0', branch = 'polkadot-v0.9.13', default-features = false }
cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus', version = '0.1.0', branch = 'polkadot-v0.9.13', default-features = false }
cumulus-primitives-parachain-inherent = { git = 'https://github.com/paritytech/cumulus', version = '0.1.0', branch = 'polkadot-v0.9.13', default-features = false }
# cumulus-relay-chain-interface = { git = 'https://github.com/paritytech/cumulus', version = '0.1.0', branch = 'polkadot-v0.9.13', default-features = false }
# cumulus-relay-chain-local = { git = 'https://github.com/paritytech/cumulus', version = '0.1.0', branch = 'polkadot-v0.9.13', default-features = false }

# Polkadot dependencies
polkadot-cli = { git = 'https://github.com/paritytech/polkadot', version = '0.9.13', branch = 'release-v0.9.13', default-features = false }
polkadot-parachain = { git = 'https://github.com/paritytech/polkadot', version = '0.9.13', branch = 'release-v0.9.13', default-features = false }
polkadot-primitives = { git = 'https://github.com/paritytech/polkadot', version = '0.9.13', branch = 'release-v0.9.13', default-features = false }
polkadot-service = { git = 'https://github.com/paritytech/polkadot', version = '0.9.13', branch = 'release-v0.9.13', default-features = false }
polkadot-runtime-common = { git = 'https://github.com/paritytech/polkadot', version = '0.9.13', branch = 'release-v0.9.13', default-features = false }

[build-dependencies]
substrate-build-script-utils = { version = '3.0.0', git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }

[dev-dependencies]
assert_cmd = '0.12'
nix = '0.17'
tempfile = '3.2.0'